# CPoker-1.0.1

CPoker_1.0.1/: AUTHORS  CPoker.desktop  ChangeLog  Makefile  README  config.h.in  configure  configure.ac
CPoker_1.0.1/CPoker/License/: gpl.txt
CPoker_1.0.1/CPoker/README/: README.html  README.rst  README.txt
CPoker_1.0.1/CPoker/Sources/: CPoker.c
CPoker_1.0.1/CPoker/Sources/Include/: buttons_utils.c  displaying_utils.c  drag_and_drop.c  game_constante.c  game_constante1.c  game_constante2.c  game_constante_final.c  game_settings.c  game_structure.c  images_utils.c  initialisation_utils.c  note.txt  text_utils.c  vector.c
CPoker_1.0.1/CPoker/Sources/Include/Animations/: animations.c  animations_compute_trajectories.c
CPoker_1.0.1/CPoker/Sources/Include/Cards/: cards_combinations.c  cards_mixing.c  cards_utils.c
CPoker_1.0.1/CPoker/Sources/Include/Datatypes/: list.c  list.h  queue.c  queue.h  stack.c  stack.h
CPoker_1.0.1/CPoker/Sources/Include/Headers/: SDL2_functions.h  animations.h  cards.h  datatypes.h
CPoker_1.0.1/CPoker/Sources/Include/SDL2_functions/: SDL2_functions.c
CPoker_1.0.1/Source/: CPoker.c
CPoker_1.0.1/Source/Include/: buttons_utils.c  displaying_utils.c  drag_and_drop.c  game_constante.c  game_constante_final.c  game_settings.c  game_structure.c  images_utils.c  initialisation_utils.c  text_utils.c  vector.c
CPoker_1.0.1/Source/Include/Animations/: animations.c  animations_compute_trajectories.c
CPoker_1.0.1/Source/Include/Cards/: cards_combinations.c  cards_mixing.c  cards_utils.c
CPoker_1.0.1/Source/Include/DEBUG/: debug.c
CPoker_1.0.1/Source/Include/Datatypes/: list.c  list.h  queue.c  queue.h  stack.c  stack.h
CPoker_1.0.1/Source/Include/Headers/: SDL2_functions.h  animations.h  cards.h  datatypes.h
CPoker_1.0.1/Source/Include/SDL2_functions/: SDL2_functions.c
CPoker_1.0.1/autom4te.cache/: output.0  requests  traces.0
